manifests/cluster-addons/media/sonarr/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sonarr
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sonarr

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-home
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus-blackbox-exporter
        - matchLabels:
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            app.kubernetes.io/name: bazarr
        - matchLabels:
            app.kubernetes.io/name: seerr
      toPorts:
        - ports:
            - port: '8989'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: jellyfin
      toPorts:
        - ports:
            - port: '8096'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prowlarr
      toPorts:
        - ports:
            - port: '9696'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: qbittorrent
        - matchLabels:
            app.kubernetes.io/name: sabnzbd
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP

    - toFQDNs:
        - matchName: 'sentry.sonarr.tv'
        - matchName: 'services.sonarr.tv'
        - matchName: 'skyhook.sonarr.tv'
        - matchName: 'thexem.info'
        - matchName: 'api.nzbgeek.info'
        - matchName: 'api.nzb.life'
        - matchName: 'artworks.thetvdb.com'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
